@@ -35,6 +35,7 @@ gnulib_modules="
   assert
   autobuild
   backupfile
+  backup-rename
   base32
   base64
   buffer-lcm
