@@ -9,6 +9,18 @@ GNU coreutils NEWS                                    -*- outline -*-
   mv would leave such symlinks behind in the source file system.
   [the bug dates back to the initial implementation]
 
+  When creating numbered backups, cp, install, ln, and mv now avoid
+  races that could lose backup data in unlikely circumstances.  Since
+  the fix relies on the renameat2 system call of Linux kernel 3.15 and
+  later, the races are still present on other platforms.
+  [the bug dates back to the initial implementation]
+
+  cp, install, ln, and mv now use a numbered instead of a simple
+  backup if copying a backup file to what might be its original.
+  E.g., 'rm -f a a~; : > a; echo data > a~; cp --backup=simple a~ ./a'
+  now makes a numbered backup file instead of losing the data.
+  [the bug dates back to the initial implementation]
+
   date and touch no longer overwrite the heap with large
   user specified TZ values (CVE-2017-7476).
   [bug introduced in coreutils-8.27]
